# Total-LLM-v2

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/total_llm/: __init__.py  app.py
backend/src/total_llm/api/: alarms.py  analysis.py  chat.py  devices.py  discovery.py  documents.py  reports.py  system.py
backend/src/total_llm/core/: config.py  dependencies.py  exceptions.py  security.py
backend/src/total_llm/database/: init.py  schema.sql  seed.py
backend/src/total_llm/models/: schemas.py
backend/src/total_llm/services/: alarm_service.py  device_control.py  device_tools.py  discovery_service.py  embedding.py  health_scheduler.py  profiling_service.py  qdrant.py  rag_agent.py  report_scheduler.py  report_service.py  tool_agent.py  vlm_service.py
backend/tests/: conftest.py  test_alarm_lifecycle.py  test_analysis_alarm_pipeline.py  test_chat_tools_api.py  test_consistency.py  test_device_health.py  test_discovery.py  test_discovery_api.py  test_font_rendering.py  test_health_scheduler.py  test_profiling_service.py  test_report_aggregation.py  test_report_pdf.py  test_report_scheduler.py  test_smoke.py  test_tool_agent.py
data/documents/: 01_물리보안_통합_SOP.md  02_CCTV_운영_가이드라인.md  03_출입통제_시스템_운영.md  04_침입감지_경보_시스템.md  05_시설유형별_보안_기준.md  06_보안장비_유지보수_절차.md  07_사고대응_비상절차.md
data/qdrant_storage/: raft_state.json
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts
scanner/: Dockerfile  main.py  requirements.txt
(+101 files in other folders)
